[workspace]
members = [".", "ngpu", "ntask"]
default-members = ["."]

[package]
name = "ssbusync"
version = "0.1.2"
authors = ["blu-dev", "BlankMauser"]
edition = "2021"

[package.metadata.skyline]
titleid = "01006A800016E000" # Smash Ultimate

[features]
default = ["nro-entry"]
#default = ["nro-entry"]
latency-slider = ["local-latency-slider"]
nro-entry = []
disabler-symbol = []

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
paste = "1.0.15"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.147"
skyline = { git = "https://github.com/ultimate-research/skyline-rs" }
tracing = "0.1.44"
ngpu = { path = "ngpu" }
symbaker = { git = "https://github.com/BlankMauser/symbaker"}
semver = "1.0.27"
camino = "1.2.2"
toml = "0.8.23"
local-latency-slider = { git = "https://github.com/BlankMauser/local-latency-slider", optional = true }
#latency_slider = { package = "latency_slider" , path = "E:/HewDropRemix/VsyncPatchedHDR/local-latency-slider", optional = true }


[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
opt-level = 'z'
codegen-units = 1
